feat: Improve "About" screen, notification vibrations, and update dependencies
This commit enhances the "About" screen with new sharing and release-checking options, introduces distinct vibration patterns for different notification types, and updates the app to build with Java 21.

**Key Changes:**

*   **"About" Screen Enhancements:**
    *   Adds "Share" and "Releases" buttons to the `AppAboutActivity` screen, allowing users to easily share the app and check for new versions on GitHub.
    *   Displays the app's fork information and full version name (`V 1.8.5-vk`).
    *   Updates the `README.md` with a clearer feature list and new screenshots.

*   **Notification Improvements:**
    *   Introduces custom vibration patterns for different message types:
        *   **OTP:** A pattern resembling the Morse code for "OTP".
        *   **Transaction:** A "Cha-Ching" like pattern.
        *   **Default:** A heartbeat-style vibration.
    *   Ensures vibration works even for silent TTS transaction notifications.
    *   Fixes a bug where the download progress bar was not updating correctly if the total file size was unknown.

*   **Build & Dependency Updates:**
    *   Updates `gradle.properties` to use JVM arguments optimized for Java 21 (ZGC).
    *   Bumps the app version from `1.8.4-vk` to `1.8.5-vk`.
    *   Removes the "Thank You" app check, making the "Block Number" feature unconditionally available.

*   **Localizations:**
    *   Adds new strings for "Share," "Releases," and "Fork From" in English, Hindi, Marathi, Tamil, Telugu, Kannada, and Malayalam.
    *   Shortens the "Version" string to "V" across all updated languages for a cleaner UI.

*   **Code Cleanup & Fixes:**
    *   Excludes messages containing the word "successful" from being treated as OTPs to reduce false positives.
    *   Refactors `ConversationsAdapter` to remove an unnecessary wrapper (`addLockedLabelIfNeeded`).
    *   Updates the binary APK and its corresponding baseline profiles.